[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="1.0", features=["derive"] }
bincode = { version="1.3.2" }
tokio = { version="1", features=["full"] }
rand = "0.8"
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs" }
tabled = { git = "https://github.com/zhiburt/tabled" }